[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for my projects"
authors = [
    { name = "No Name No Fame", email = "singh.avtar_92@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
